--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joel Barriga - Portfolio</title>
+    <title>Joel Barriga</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Portfolio of Joel Barriga, a Product Manager and Tech Enthusiast specializing in product strategy, IT architectures, user journeys, and leading teams to deliver impactful digital products.">
 
     <!-- Favicon (SVG as Data URL) -->
     <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='jbGradient' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' stop-color='%233949ab'/><stop offset='100%' stop-color='%237b1fa2'/></linearGradient></defs><circle cx='50' cy='50' r='48' fill='%23FFFFFF'/><circle cx='50' cy='50' r='48' fill='none' stroke='url(%23jbGradient)' stroke-width='4'/><text x='50%' y='50%' dy='.35em' font-family='Jost, sans-serif' font-size='55' font-weight='bold' text-anchor='middle' fill='url(%23jbGradient)'>JB</text></svg>">
